# Car-Light-Sync

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  AUDIO_INTEGRATION.md  BUGFIX_SIMULATION.md  CAN_BUS_FIX.patch  CHANGELOG.md  CMakeLists.txt  DEAD_CODE_CLEANUP.md  FEATURES.md  FFT_IMPLEMENTATION_SUMMARY.md  GEMINI.md  LICENSE  Model3CAN.json  OPTIMIZATIONS.md  QUICKSTART.md  README.md  README_MINIFICATION.md  REFACTOR_SAVE_PROFILE.md  TECHNICAL.md  TWAI_CRASH_ISSUE.md  WIRING.md  car-light-sync.sh  check-project.sh  compress_html.py  create_release.py  inject_version.py  package.json  partitions.csv  partitions.esp32c6.csv  partitions.esp32s3_n4r2.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c6  sdkconfig.esp32c6_bll  sdkconfig.esp32c6_blr  sdkconfig.esp32c6_production  sdkconfig.esp32c6_speedometer  sdkconfig.esp32dev  (+5 more)
boards/: esp32-s2-saola-1.json  esp32-s3-devkitc-1-n4r2.json  esp32-s3-devkitc-1.json  esp32dev.json
data/: dashboard.html  default.json  i18n.js  index.html  script.js  style.css
docs/: CAN_CONFIG_STATUS.md  JSON_API_REFERENCE.md  MIGRATION_v2.3.md  firmware.md  hardware.md  logiciel.md  materiel.md  problemes.md  software.md  troubleshooting.md
include/: audio_input.h  ble_api_service.h  can_bus.h  can_servers_config.h  canserver_udp_server.h  captive_portal.h  commander.h  config.h  config_manager.h  espnow_link.h  gvret_tcp_server.h  led_effects.h  led_strip_encoder.h  log_stream.h  nvs_manager.h  ota_update.h  panda_tcp_server.h  reset_button.h  settings_manager.h  slcan_tcp_server.h  spiffs_storage.h  status_led.h  status_manager.h  task_core_utils.h  tesla_can.h  vehicle_can_config.h  vehicle_can_config_generated.h  vehicle_can_mapping.h  vehicle_can_unified.h  vehicle_can_unified_config.generated.h  vehicle_can_unified_config.h  version_info.h  web_server.h  wifi_credentials.h  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  audio_input.c  ble_api_service.c  boot_loop_guard.c  boot_loop_guard.h  can_bus.c  can_servers_config.c  canserver_udp_server.c  captive_portal.c  commander.c  config.c  config_manager.c  espnow_link.c  gvret_tcp_server.c  led_effects.c  led_strip_encoder.c  led_strip_encoder.h  log_stream.c  main.c  nvs_manager.c  ota_update.c  panda_tcp_server.c  reset_button.c  settings_manager.c  slcan_tcp_server.c  spiffs_storage.c  status_led.c  tesla_can.c  vehicle_can_config.c  vehicle_can_mapping.c  vehicle_can_unified.c  vehicle_can_unified_config.generated.c  web_server.c  wifi_manager.c
mobile.app/: .gitignore  .npmrc  AUTO_CONNECT_FLOW.txt  BLUETOOTH_ADAPTER.md  CHANGELOG.md  CLI_COMMANDS.md  COMMANDS_CHEATSHEET.txt  FULLSCREEN_SETUP.md  GETTING_STARTED.txt  MOBILE_BEHAVIOR.md  PERMISSIONS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_CHECKLIST.md  TROUBLESHOOTING.md  capacitor.config.json  init.js  package-lock.json  package.json  sync-html.js
presets/: Amber Classic Plus.json  Arc-en-ciel Party.json  Classique OEM.json  Cyberpunk 2077.json  Discret Nuit.json  Elegant Luxe.json  Futuriste Neon.json  Ice Blue Arctic.json  Minimal Tech.json  Pluie Brouillard.json  Police Urgence.json  Racing Circuit.json  Raph.json  Showroom Pulse.json  Sport Agressif.json  Stealth Mode.json  Sunset Dreams.json
release/: VERSION.txt
scripts/: minify.js  pre_build_minify.py
tools/: .gitignore  MIGRATION.md  README.md  __init__.py  dbc_to_config.py  (+6 more)
(+26 files in other folders)
